# voltsonic

./: .env.example  .gitignore  README.md  admin.html  index.html
backend/: .env.example  README.md  docker-compose.yml  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/app/api/: deps.py
backend/app/api/routes/: bets.py  health.py  rounds.py  sync.py
backend/app/services/: __init__.py  contract.py  indexer.py  rpc.py
backend/voltsonic_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
broadcast/ConfigureRandomness.s.sol/84532/: run-1776085886103.json  run-latest.json
broadcast/DeployVoltSonic.s.sol/8453/: run-latest.json
broadcast/DeployVoltSonic.s.sol/84532/: run-1775322294279.json  run-1775378531535.json  run-1775378839865.json  run-1775382167690.json  run-1775400929295.json  run-1775402194541.json  run-1776014814375.json  run-1776062624664.json
broadcast/OpenBetting.s.sol/84532/: run-1776024079669.json
broadcast/RequestSettlement.s.sol/84532/: run-1776063550596.json  run-1776064156589.json  run-1776064693283.json
frontend/: .env.example  index.html  interact.js  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  styles.css
js/: admin.js  player.js  voltsonic-shared.js
script/: AcceptOwnership.s.sol  ConfigureRandomness.s.sol  DeployVoltSonic.s.sol  OpenBetting.s.sol  RequestSettlement.s.sol  SetVoltToken.s.sol  TransferOwnership.s.sol  UpgradeVoltSonic.s.sol
src/: voltsonic.sol
src/utils/: UpgradeableUtils.sol
test/: VoltSonic.t.sol
(+39 files in other folders)
