[project]
name = "voltsonic-backend"
version = "0.1.0"
description = "FastAPI + PostgreSQL backend for VoltSonic"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "greenlet>=3.1.1,<4.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "alembic>=1.14.0,<2.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "web3>=7.6.0,<8.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
